# reverse-gol

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  gol.cpp  gol.hpp  main.cpp  run.sh  table.hpp  test.sh
doc/html/: annotated.html  classGol-members.html  classGol.html  classTable-members.html  classTable.html  classes.html  files.html  functions.html  functions_func.html  gol_8hpp_source.html  graph_legend.html  index.html  md_README.html  pages.html  table_8hpp_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  classGol.tex  classTable.tex  md_README.tex  refman.tex
test/: CMakeLists.txt  gol_test.cpp
tests/: in1.txt  in2.txt  in3.txt  in5.txt
